--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,15 @@ services:
     stdin_open: true
     volumes:
       - .:/auth_app/
+      - rubygems:/usr/local/bundle
+
     ports:
       - "3007:3007"
     networks:
     - policy-network
+
+volumes:
+  rubygems:
 
 networks:
   policy-network:
